--- a/src/styles/stylesTablet.scss
+++ b/src/styles/stylesTablet.scss
@@ -1,23 +1,51 @@
 /* Styles for tablet screen: from 1250px */
+@import "settings/_colors";
 
-@media (min-width: 810px) {
+@media (min-width: 710px) {
 
 
   /**************** UI ****************/
 
   /* Navbar.js */
 
-  .fake-links-container {
-    margin: auto;
-    width: 50%;
-    height: 4rem;
-  }
-  .fake-link {
-    margin: auto;
-  }
-  .fake-link:hover {
-    cursor: pointer;
+  .menu-container {
+    align-items:  center;
   }
 
+  /* Footer */
 
+
+  .top-footer-container {
+    display: flex;
+    width: 100%;
+  }
+
+  .marketing {
+    img {
+      margin-right: .75rem ;
+      margin-bottom: 2px;
+    }
+  }
+
+  .email {
+    input {
+      margin-right: 2rem;
+      width: 30rem;
+      height: 4rem;
+      border: 1px solid $lightgray;
+      padding-left: 1rem;
+    }
+    button {
+      height: 4rem;
+      border: 2px solid $dark;
+      background: none;
+      h4 {
+        padding: 0 3.5rem;
+        width: max-content;
+      }
+    }
+
+  }
+
+// end of tablet styles
 }
