--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -49,7 +49,26 @@ h4 {
   font-family: 'Lato', sans-serif;
 }
 
+h3 {
+  font-family: "League Spartan", sans-serif;
+  font-size: 2em;
+}
+
+h2 {
+  font-family: "League Spartan", sans-serif;
+  font-size: 2.5em;
+}
+
 p {
   color: $gray
 
 }
+
+
+
+
+
+
+
+
+
