--- a/src/styles/settings/_colors.scss
+++ b/src/styles/settings/_colors.scss
@@ -4,6 +4,6 @@ $lightgray: #e8e8e8;
 $orange: #E46B3B;
 $dark: #1E1E1E;
 $gray: #a1a1a1;
-$ultra-lightgray: #FFFFFF;
+$ultra-lightgray: #fdfdfd;
 
 
