auth with github ok - still need to handle token

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -244,12 +244,20 @@
   }
 }
 
+
+
+
 /* UI ---- Login.js */
 .login-box {
+  padding-top: 2rem;
   width: 25rem;
   height: 28rem;
   border: solid 2px $lightgray;
 }
+
+
+
+
 
 
 
