--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -49,9 +49,12 @@
 .separator-wide {
   width: 100%;
   height: 1px;
-  background-color: $gray;
+  background-color: $lightgray;
 }
 
+.margin {
+  margin: 2rem;
+}
 
 
 
@@ -79,9 +82,90 @@
   flex-wrap: wrap;
 }
 
+// PAGES --- Article [postId].js
 
+.article-container {
+  padding: 7.5rem 0;
+  width: 1300px;
+  .big-image {
+    width: 100% !important;
+    height: 53rem;
+  }
+  .medium-image {
+    width: 65%;
+    height: 35rem;
+  }
+  img {
+    margin: 4rem 0;
+  }
+}
 
+.title-article-container {
+  p {
+    max-width: 20rem;
+    text-align: center;
+  }
+  h1 {
+    max-width: 40rem;
+    text-align: center;
+  }
+}
 
+.text-article-container {
+  width: 50%;
+  display: flex;
+  p {
+    align-items: flex-end;
+  }
+}
+
+.first-paragraph {
+  min-width: 100%;
+  .big-letter-article {
+    font-size: 4em;
+    max-width: fit-content;
+    margin-left: -.1em;
+    padding-top: .5rem;
+  }
+}
+
+.rest-text-article {
+  display: flex;
+  align-items: flex-start;
+  padding-left: 1em;
+}
+
+.text {
+  margin-top: -.7em;
+}
+
+.info-author-article-container {
+  position: absolute;
+  margin-top: 1.5rem;
+  right: 0;
+  width: 11rem;
+  border: 1px solid $lightgray;
+  padding: 2rem 0;
+  p, h4 {
+    margin: 0;
+  }
+  p {
+    font-style: italic ;
+  }
+}
+
+.bold-paragraph-article {
+  position: absolute;
+  left: 5rem;
+  width: 20rem;
+  border-left: 2px solid $orange;
+  padding-left: 2.5rem;
+}
+
+.second-paragraph {
+  margin-top: 2rem;
+margin-left: 10rem;
+}
 
 
 
