--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -61,7 +61,29 @@ a {
   position: relative;
 }
 
+
+.orange {
+  color: $orange
+}
+
+
+// Margins
+.m-r-1 {
+  margin-right: 1rem;
+}
+
+.m-t-1 {
+  margin-top: 1rem;
+}
+
+
+
+
 /* FONTS */
+h1, h2, h3, h5 {
+  color: $dark;
+}
+
 h5 {
   font-family: 'Lora', sans-serif;
   font-size: 1.8em;
@@ -69,6 +91,8 @@ h5 {
 }
 h4 {
   font-family: 'Lato', sans-serif;
+  color: $dark;
+  font-size: 14px
 }
 
 h3 {
