--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -349,10 +349,32 @@ margin-left: 10rem;
 
 /* UI ---- Login.js */
 .login-box {
-  padding-top: 2rem;
+  padding-bottom: 2rem;
   width: 25rem;
   height: 28rem;
   border: solid 2px $lightgray;
+
+  button {
+    padding: 1rem;
+    width: 100%;
+    margin: 1rem;
+    border: none;
+    cursor: pointer;
+  }
+  .github-button {
+
+    background-color: $dark;
+    color: white;
+  }
+  .facebook-button {
+    background-color: #2077F2;
+    color: white;
+  }
+
+  .google-button {
+    background-color: $orange;
+    color: white;
+  }
 }
 
 
