i18n OK! - add language contex

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -353,6 +353,7 @@ margin-left: 10rem;
   width: 25rem;
   height: 28rem;
   border: solid 2px $lightgray;
+  border-radius: 5px;
 
   button {
     padding: 1rem;
@@ -360,6 +361,7 @@ margin-left: 10rem;
     margin: 1rem;
     border: none;
     cursor: pointer;
+    border-radius: 5px;
   }
   .github-button {
 
