--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,6 +2,7 @@
 
 html,
 body {
+  position: relative;
   padding: 0;
   margin: 0;
   font-family: 'Lato', sans-serif, 'Lora', serif,  'League Spartan', sans-serif;
@@ -71,9 +72,23 @@ a {
 .m-r-1 {
   margin-right: 1rem;
 }
+.m-l-1 {
+  margin-left: 1rem;
+}
 
 .m-t-1 {
   margin-top: 1rem;
+}
+// Padding
+.p-r-1 {
+  padding-right: 1rem;
+}
+.p-l-1 {
+  padding-left: 1rem;
+}
+
+.p-t-4 {
+  padding-top: 4rem;
 }
 
 
