--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,17 +1,6 @@
 @import "settings/_colors";
 
 
-/**************** AUTH ****************/
-
-
-
-
-
-
-
-
-
-
 /**************** LAYOUT ****************/
 
 /* Container.js */
@@ -25,7 +14,7 @@
 
 .content {
   display: flex;
-  width: 1330px;
+  width: 100%;
   padding: 0 1rem;
 }
 
@@ -69,40 +58,37 @@
 
 /**************** PAGES ****************/
 
-// PAGES --- Dashboard //
+
+// PAGES --- Article [postId].js
+
 .header-dashboard-container {
   width: 100%;
   display: flex;
   align-items: center;
   flex-direction: column;
-  margin: 5rem 0 3rem 0;
+  margin: 7rem 0 3rem 0;
 }
 
 .articles-dashboard-container {
-  justify-content: space-between;
-  align-items: flex-start;
-  width: 100%;
-  height: 100%;
-  display: flex;
+  justify-content: center;
   flex-wrap: wrap;
+  align-items: flex-start;
+  max-width: 100vw;
+  //height: 100%;
+  display: flex;
 }
-
-// PAGES --- Article [postId].js
 
 .article-container {
   padding: 7.5rem 0;
-  width: 1300px;
-  .big-image {
-    width: 100% !important;
-    height: 53rem;
-  }
-  .medium-image {
-    width: 65%;
-    height: 35rem;
-  }
   img {
     margin: 4rem 0;
+    max-width: 100vw;
+    height: auto;
   }
+}
+
+.info-author-article-container {
+display: none;
 }
 
 .title-article-container {
@@ -117,9 +103,9 @@
 }
 
 .text-article-container {
-  width: 50%;
+  max-width: 90vw;
   display: flex;
-  margin: 3rem 0;
+  margin: 2rem 0;
   p {
     align-items: flex-end;
   }
@@ -145,32 +131,17 @@
   margin-top: -.7em;
 }
 
-.info-author-article-container {
-  position: absolute;
-  margin-top: 1.5rem;
-  right: 0;
-  width: 11rem;
-  border: 1px solid $lightgray;
-  padding: 2rem 0;
-  p, h4 {
-    margin: 0;
-  }
-  p {
-    font-style: italic ;
-  }
-}
+
 
 .bold-paragraph-article {
-  position: absolute;
-  left: 5rem;
-  width: 20rem;
+  width: 100%;
   border-left: 2px solid $orange;
   padding-left: 2.5rem;
+  margin-bottom: 2rem;
 }
 
 .second-paragraph {
-  //margin-top: 2rem;
-margin-left: 10rem;
+margin-left: 0;
 }
 
 
@@ -232,17 +203,13 @@ margin-left: 10rem;
   top: 8.5rem;
   z-index: 100;
   width: 100%;
-  display: none; // display flex with .open
+  display: flex; // display flex with .open
   padding-left: 2rem;
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
   background-color: $lightgray;
   min-height: calc(100vh - 8.5rem); // 8.5rem = height of navbar
-}
-
-.open {
-  display: flex;
 }
 
 .fixedOnTop {
@@ -270,7 +237,7 @@ margin-left: 10rem;
 
 .bottom-footer-container {
   display: flex;
-  width: 100%;
+  min-width: 100%;
   height: 100%;
   background-color: $ultra-lightgray;
 }
@@ -278,33 +245,28 @@ margin-left: 10rem;
 .logo-footer-container {
   width: 20rem;
   height: 100%;
-  padding-top: 4.5rem;
-
+  //padding-top: 4.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .footer-links-container {
-  display: flex;
-  width: 100%;
-  justify-content: space-around;
-  padding-top: 3rem;
-  p {
-    font-size: 13px;
-    margin: 10px auto;
-  }
+  display: none;
 }
 
+.socials-footer-container .content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .socials-footer-container {
   width: 100%;
   background-color: $ultra-lightgray;
   img {
-    padding-bottom: 2rem;
-    margin-right: 2rem;
+    max-width: fit-content;
   }
-  p {
-    margin: 0;
-    padding-top: 0.2rem;
 
-  }
 }
 
 /* UI --- Card */
@@ -312,11 +274,12 @@ margin-left: 10rem;
 
 .card-container {
   max-width: 390px;
-  margin-bottom: 6rem ;
+  margin: 2rem;
   height: 30rem;
   display: flex;
   flex-direction: column;
   position: relative;
+
   img {
     width: 390px;
     height: 300px;
@@ -352,7 +315,7 @@ margin-left: 10rem;
   padding-bottom: 2rem;
   width: 25rem;
   height: 28rem;
-  border: solid 2px $lightgray;
+  border: solid 1px $lightgray;
   border-radius: 5px;
 
   button {
