--- a/src/styles/stylesDesktop.scss
+++ b/src/styles/stylesDesktop.scss
@@ -1,74 +1,88 @@
 /* Styles for desktop screen: from 1250px */
+@import "settings/_colors";
 
-@media (min-width: 1250px) {
+
+@media (min-width: 1300px) {
+
+  /**************** PAGE ****************/
+
+
+  // PAGE --- Article [postId].js
+
+  .info-author-article-container {
+    display: flex;
+    position: absolute;
+    margin-top: 1.5rem;
+    right: 0;
+    width: 11rem;
+    border: 1px solid $lightgray;
+    padding: 2rem 0;
+    p, h4 {
+      margin: 0;
+    }
+    p {
+      font-style: italic ;
+    }
+  }
+
+  .text-article-container {
+    width: 50%;
+  }
+
+  .article-container {
+    width: 1300px;
+
+  }
+
+  .second-paragraph {
+    margin-left: 10rem;
+  }
+
+  .bold-paragraph-article {
+    position: absolute;
+    left: 5rem;
+    width: 20rem;
+    border-left: 2px solid $orange;
+    padding-left: 2.5rem;
+  }
+
+  /**************** LAYOUT ****************/
+
+
+  .content {
+    width: 1300px;
+  }
 
 
   /**************** UI ****************/
 
-  /* Navbar.js */
 
-  .navbar {
-    padding: 0 6rem;
-  }
-
+  // Navbar
   .left-side-navbar-container {
     width: 25%;
-    display: flex;
+    display: flex !important;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: flex-start ;
   }
 
-  .left-side-navbar-container img {
-    margin-right: 1.5rem;
+  .right-side-navbar-container {
+    //display: flex;
+    width: 25%;
+    //justify-content: center !important;
+
   }
 
 
   .logo-container {
-    min-width: 50%;
-    justify-content: center;
-    button {
-      display: none;
-    }
-  }
+    justify-content: center !important;
 
-  .logo-container h4 {
-    display: none;
-  }
-
-  .right-side-navbar-container {
-    display: flex;
-    width: 25%;
-    justify-content: flex-end;
-    align-items: center;
-    .img-right-side-navbar {
-      margin-left: 2rem;
-    }
-    h4 {
-      margin-right: 2rem;
-    }
-    button {
-      background: none;
-      border: none;
-      cursor: pointer;
-    }
   }
 
   .fake-links-container {
     display: flex;
     margin: auto;
-    width: 50%;
+    max-width: 50%;
     height: 4rem;
-
-  }
-  .fake-link {
-    margin: auto;
-  }
-  .fake-link:hover {
-    cursor: pointer;
-  }
-
-  .menu-container {
-    display: none !important;
   }
 
   /* Footer */
@@ -80,6 +94,69 @@
     form {
       margin-left: 10rem;
     }
+  }
+
+  .footer-links-container {
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+    padding-top: 3rem;
+    p {
+      font-size: 13px;
+      margin: 10px auto;
+    }
+  }
+
+
+  .top-footer-container {
+    display: flex;
+    width: 100%;
+  }
+
+  .marketing {
+    img {
+      margin-right: .75rem ;
+      margin-bottom: 2px;
+    }
+  }
+
+  .email {
+    input {
+      margin-right: 2rem;
+      width: 30rem;
+      height: 4rem;
+      border: 1px solid $lightgray;
+      padding-left: 1rem;
+    }
+    button {
+      height: 4rem;
+      border: 2px solid $dark;
+      background: none;
+      h4 {
+        padding: 0 3.5rem;
+        width: max-content;
+      }
+    }
+
+  }
+
+  .socials-footer-container .content {
+    display: flex;
+    flex-direction: row;
+    //align-items: flex-start;
+    justify-content: flex-start !important;
+  }
+
+  .bottom-footer-container {
+
+    padding-right: 1rem;
+
+  }
+
+  .logo-footer-container {
+    display: initial;
+    //justify-content: center;
+    //align-items: center;
   }
 
 
