--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -51,11 +51,6 @@
 }
 
 
-
-
-
-
-
 /**************** PAGES ****************/
 
 
@@ -66,7 +61,7 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  margin: 7rem 0 3rem 0;
+  margin: 6.5rem 0 3rem 0;
 }
 
 .articles-dashboard-container {
@@ -79,7 +74,7 @@
 }
 
 .article-container {
-  padding: 7.5rem 0;
+  padding: 6.5rem 0;
   img {
     margin: 4rem 0;
     max-width: 100vw;
@@ -199,22 +194,43 @@ margin-left: 0;
 
 
 .menu-container {
-  position: absolute;
+  position: fixed;
   top: 8.5rem;
   z-index: 100;
   width: 100%;
   display: flex; // display flex with .open
   padding-left: 2rem;
+  padding-top: 4rem;
   flex-direction: column;
   align-items: flex-start;
-  justify-content: center;
   background-color: $lightgray;
   min-height: calc(100vh - 8.5rem); // 8.5rem = height of navbar
+  overflow: hidden;
+  img {
+    margin: 1rem 0 !important;
+  }
+}
+
+.bar {
+  height: 4px;
+  width: 30px;
+  border-radius: 2px;
+  margin: 5px auto;
+  display:block;
+  z-index: 9999;
+  background: #aaa;
+  box-shadow: inset 0 1px 2px rgba(0, 0, 0, .5);
+  transition: all .3s ease;
+}
+
+.menu:hover > .bar {
+  background: $orange;
 }
 
 .fixedOnTop {
   position: fixed;
   top: 0;
+  z-index: 1000;
 }
 
 
@@ -229,6 +245,7 @@ margin-left: 0;
   flex-direction: column;
   justify-content: center;
   border-top: solid 1px $lightgray;
+  margin-top: 3rem;
 }
 
 .top-footer-container {
