--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -350,10 +350,8 @@ margin-left: 0;
 /* UI ---- Login.js */
 .login-box {
   padding-bottom: 2rem;
-  width: 25rem;
   height: 28rem;
-  border: solid 1px $lightgray;
-  border-radius: 5px;
+  border: none;
 
   button {
     padding: 1rem;
