--- a/src/styles/stylesTablet.scss
+++ b/src/styles/stylesTablet.scss
@@ -29,6 +29,12 @@
 
   /* Navbar.js */
 
+  .login-box {
+    width: 25rem;
+    border: solid 1px $lightgray;
+    border-radius: 5px;
+  }
+
   .navbar {
     padding: 0 6rem;
   }
